# artekmed_k4a_capture

./: CMakeLists.txt  conanfile.py
include/: MsgpackSerialization.h
src/: CMakeLists.txt  K4ACapture.cpp
src/receiver/: CMakeLists.txt  k4a_stream_receiver.cpp
src/rtsp_receiver/: CMakeLists.txt  k4a_rtsp_receiver.cpp
src/rtsp_sender/: CMakeLists.txt  k4a_rtsp_sender.cpp
src/rtsp_sender_opencv/: CMakeLists.txt  opencv_rtsp_sender.cpp
src/sender/: CMakeLists.txt  MsgpackSerialization.h  k4a_stream_sender.cpp
src/sender_opencv/: CMakeLists.txt  opencv_stream_sender.cpp
src/zmq_receiver/: CMakeLists.txt  k4a_zmq_receiver.cpp
src/zmq_sender/: CMakeLists.txt  k4a_zmq_sender.cpp
